--- a/.air.toml
+++ b/.air.toml
@@ -5,7 +5,7 @@ tmp_dir = "bin"
 [build]
   args_bin = []
   bin = "./bin/main"
-  cmd = "go build -o ./bin/main ./cmd/api/*.go"
+  cmd = "go build -o ./bin/main.exe ./cmd/api/"
   delay = 1000
   exclude_dir = ["assets", "bin", "vendor", "testdata", "docs", "scripts"]
   exclude_file = []
@@ -22,8 +22,8 @@ tmp_dir = "bin"
   poll_interval = 0
   post_cmd = []
   pre_cmd = []
-  rerun = true
-  rerun_delay = 5
+  rerun = false
+  rerun_delay = 500
   send_interrupt = false
   stop_on_error = false
 
