--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -6,8 +6,8 @@ services:
     container_name: postgres-db
     environment:
       POSTGRES_DB: social
-      POSTGRES_USER: admin 
-      POSTGRES_PASSWORD:  adminpassword
+      POSTGRES_USER: "admin"
+      POSTGRES_PASSWORD: "adminpassword"
     volumes:
       - db-data:/var/lib/postgresql/data
     ports: 
